--- a/templates/program/_form.html.twig
+++ b/templates/program/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
 <h3 class="text-light">{{ form_widget(form) }}</h3>
-<button class="btn btn-success btn-lg">{{ button_label|default('Save') }}</button>
+<button class="btn btn-success btn-lg">{{ button_label|default('Sauvegarder'|trans) }}</button>
 {{ form_end(form) }}
