--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -12,7 +12,8 @@
     {{ form_end(form) }}
     {% for program in programs %}
         <div>
-            <h2 class="text-light">{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+            <h2 class="text-light">{{ loop.index }} / {{ program.title }} - {{ 'Catégorie'|trans }}
+                : {{ program.category.name }}</h2>
             <p class="text-light">{{ program.synopsis }}</p>
             {# Lien vers la fiche de la série : #}
             <a class="text-light"
