--- a/templates/season/new.html.twig
+++ b/templates/season/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ 'Nouvelle saison'|trans }}{% endblock %}
 
 {% block body %}
-    {{ '<h1 class="text-light">Créer une nouvelle saison</h1>'|trans|raw }}
+    <h1 class="text-light">{{ 'Créer une nouvelle saison'|trans }}</h1>
 
     {{ include('season/_form.html.twig') }}
 
