--- a/templates/actor/_form.html.twig
+++ b/templates/actor/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
 <h2 class="text-light">{{ form_widget(form) }}</h2>
-<button class="btn btn-success">{{ button_label|default('Save') }}</button>
+<button class="btn btn-success">{{ button_label|default("sauvegarder"|trans) }}</button>
 {{ form_end(form) }}
