--- a/templates/comment/_form.html.twig
+++ b/templates/comment/_form.html.twig
@@ -4,5 +4,5 @@
     {{ form_row(form.comment) }}
     {{ form_row(form.rate) }}
 
-<button class="btn btn-info">{{ button_lable|default('Save') }}</button>
+<button class="btn btn-info">{{ button_lable|default('Sauvegarder')|trans }}</button>
 {{ form_end(form) }}
