--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('season_index') }}">{{ 'Revenir à la liste'|trans }}</a>
+    <a class="text-light" href="{{ path('season_index') }}">{{ 'Revenir à la liste'|trans }}</a>
 
     {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
