bouton choix langues implémenté

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -36,13 +36,15 @@
                     <a class="nav-link" href="{{ path('login') }}">{{ 'CONNECTION'|trans }}</a>
                 {% endif %}
                 <li class="nav-item dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" href="#" id="dropdown09" data-bs-toggle="dropdown"
+                    <button class="btn btn-outline-primary dropdown-toggle" id="dropdown09" data-bs-toggle="dropdown"
                             aria-expanded="false">
                         {{ 'Choix de la langue'|trans }}
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdown09">
-                        <li><a class="dropdown-item" href="#">Anglais</a></li>
-                        <li><a class="dropdown-item" href="#">Français</a></li>
+                        <li><a class="dropdown-item"
+                               href="{{ path('app_index', {'_locale': 'en'}) }}">{{ 'Anglais'|trans }}</a></li>
+                        <li><a class="dropdown-item"
+                               href="{{ path('app_index', {'_locale': 'fr'}) }}">{{ 'Français'|trans }}</a></li>
                     </ul>
                 </li>
             </ul>
