--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -9,8 +9,7 @@
             <ul class="navbar-nav ms-lg-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link hover" aria-current="page"
-                       href={{ path('category_index') }}>{{ "CATEGORIES"|trans }}</a>
+                    {{ render(controller('App\\Controller\\CategoryController::index')) }}
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('actor_index') }}">{{ "ACTEURS"|trans }}</a>
