--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -6,26 +6,28 @@
 
 {% block body %}
     <div class="media">
-        <img class="align-self-start mr-3" src="{{ program.poster }}" alt="{{ program.title }} poster">
+        <img class="align-self-start mr-3" src="{{ vich_uploader_asset(program) }}" alt="{{ program.title }} poster">
         <div class="media-body">
             <h1 class="mt-0 text-light">{{ program.title }}</h1>
             <p class="text-light">{{ program.synopsis }}</p>
             <h3 class="text-light">{{ 'Catégorie :'|trans }} {{ program.category.name }}</h3>
         </div>
         <section class="d-flex flex-lg-row justify-content-start mb-lg-4">
-            {% if is_granted("ROLE_CONTRIBUTOR") %}
-
+            {% if is_granted('ROLE_ADMIN') %}
                 <a class="btn btn-light me-lg-2" href="{{ path( "program_edit", {'slug' : program.slug}) }}">
                     {{ 'Editer la série'|trans }}</a>
-
+                {# bouton pour ajouter une série à la liste des favoris #}
+                <a id="watchlist" href="{{ path('program_watchlist', {'slug': program.slug}) }}">
+                    <i class="bi {{ app.user.isInWatchList(program) ? 'bi-heart-fill' : 'bi-heart' }} text-info me-lg-2 fs-1"></i>
+                </a>
+                {{ include('program/_delete_form.html.twig') }}
+            {% elseif is_granted("ROLE_CONTRIBUTOR") %}
                 {# bouton pour ajouter une série à la liste des favoris #}
                 <a id="watchlist" href="{{ path('program_watchlist', {'slug': program.slug}) }}">
                     <i class="bi {{ app.user.isInWatchList(program) ? 'bi-heart-fill' : 'bi-heart' }} text-info me-lg-2 fs-1"></i>
                 </a>
             {% endif %}
-            {% if is_granted("ROLE_ADMIN") %}
-                {{ include('program/_delete_form.html.twig') }}
-            {% endif %}
+
         </section>
 
         <a href="{{ path("episode_index") }}" class="btn btn-light">{{ 'Liste des épisodes'|trans }}</a>
