--- a/templates/actor/edit.html.twig
+++ b/templates/actor/edit.html.twig
@@ -8,7 +8,9 @@
 
     {{ include('actor/_form.html.twig', {'button_label': 'Mettre à jour'|trans}) }}
 
-    <a href="{{ path('actor_index') }}">{{ "Revenir à la liste des acteurs"|trans }}</a>
-
     {{ include('actor/_delete_form.html.twig') }}
+
+    <a class="btn btn-info" href="{{ path('actor_index') }}">{{ "Revenir à la liste des acteurs"|trans }}</a>
+
+
 {% endblock %}
