centrage du carousel sur la homepage

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -25,4 +25,8 @@ ul .dropdown-menu {
   background-color: $secondary;
 }
 
+.carousel-inner img {
+  margin: auto;
+}
+
 @import "~bootstrap/scss/bootstrap";
