Mise en place du systéme de réinitialisation d'un mot de passe.

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -16,6 +16,15 @@ $list-group-bg: $secondary;
   color: $light;
 }
 
+h1 {
+  color: $light;
+  text-align: center;
+}
+
+p {
+  color: $light;
+}
+
 label {
   display: inline-block;
   color: $light;
