--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% if error %}
-        <div>{{ error.messageKey| trans(error.messageData, 'security') }}</div>
+        <div class="text-light">{{ error.messageKey| trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     <form action="{{ path('login') }}" method="post">
@@ -16,7 +16,11 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <input type="hidden" name="_target_path" value="/">
-
-        <button type="submit" class="btn-info">{{ "Se connecter"|trans }}</button>
+        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+            <button type="submit" class="btn-info">{{ "Se connecter"|trans }}</button>
+            <a href="{{ path("app_forgot_password_request") }}"
+               class="btn btn-warning">{{ "Mot de passe oublié"|trans }}</a>
+        </div>
     </form>
+
 {% endblock %}
