--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,10 +1,10 @@
-<h1>Hi!</h1>
+<h1>{{ 'Salut'|trans }}</h1>
 
-<p>To reset your password, please visit the following link</p>
+<p>{{ 'Pour réinitialiser votre mot de passe veuillez suivre le lien suivant : '|trans }}</p>
 
 <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
 
 <p>{{ "Ce lien expirera dans"|trans }} {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}
     .</p>
 
-<p>Cheers!</p>
+<p>{{ 'Cordialement'|trans }}</p>
